# bevy_tactics

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile
.github/workflows/: release.yaml
assets/shaders/: background.wgsl  crystal_material.wgsl  distortion_material.wgsl  glint_material.wgsl
scripts/: convert_svg_to_png.sh
src/: lib.rs  main.rs  random.rs
src/debug/: mod.rs
src/game/: animate.rs  background.rs  camera.rs  drag_n_drop.rs  effect.rs  game.rs  gizmo.rs  grid.rs  mod.rs  tiles.rs  unit.rs
src/game/grid/: grid.rs  mod.rs  selection.rs
src/game/utils/: mod.rs
src/merchant/: gizmo.rs  item.rs  mod.rs
src/skilltree/: mod.rs
src/theme/: mod.rs
src/ui/: item.rs  material.rs  mod.rs  popover.rs
src/util/: cords.rs  mod.rs
