[package]
name = "bevy_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0" }
bresenham = "0.1.1"
glob = "0.3.2"
image = "0.25.6"
rand = "0.9.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
