[package]
name = "bevy_simple"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0" }
bevy-inspector-egui = "0.31.0"
glob = "0.3.2"
image = "0.25.6"
pathfinding = "4.14.0"
rand = "0.9.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
